# Stripe-RAG-assistant

./: .dockerignore  .gitignore  Dockerfile  Makefile  Project structure.md  README.md  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  dependencies.py  routes_debug.py  routes_health.py  routes_index.py  routes_query.py
app/application/: __init__.py  api_query_service.py  eval_service.py  indexing_service.py  query_service.py
app/application_layers/: __init__.py
app/application_layers/eval/: __init__.py  build_eval_dataset.py  run_citation_eval.py  run_context_eval.py  run_full_eval.py  run_generation_eval.py  run_rerank_eval.py  (+2 more)
app/domain/: __init__.py
app/evaluation/: __init__.py  citation_metrics.py  confidence_metrics.py  context_metrics.py  dataset_builder.py  datasets.py  generation_metrics.py  judges.py  latency_metrics.py  records.py  regression.py  reports.py  rerank_metrics.py  retrieval_metrics.py  robustness_metrics.py  runner.py  utils.py
app/infrastructure/: __init__.py
app/schemas/: __init__.py  api.py  query.py  response.py
app/utils/: __init__.py  config.py  constants.py  hashing.py  ids.py  logging.py  timing.py
configs/: config.yaml
prompts/: answer_prompt_v1.jinja  no_answer_prompt_v1.jinja
scripts/eval/: smoke_build_eval_dataset.py  smoke_run_answer_eval.py  smoke_run_citation_eval.py  smoke_run_context_eval.py  smoke_run_eval.py  smoke_run_generation_eval.py  smoke_run_rerank_eval.py  smoke_run_retrieval_eval.py  smoke_run_robustness_eval.py
scripts/online/: smoke_build_context.py  smoke_generate_answer.py  smoke_rerank.py  smoke_retrieve.py
tests/integration/: test_api_lifecycle.py  test_api_query.py  test_build_context_layer.py  test_chunking_pipeline.py  test_cleaning_pipeline.py  test_embeddings_pipeline.py  test_eval_application_layers.py  test_eval_pipeline.py  test_eval_service.py  test_generate_answer_layer.py  test_indexing_service.py  test_ingestion_pipeline.py  test_rerank_layer.py  test_retrieve_layer.py  test_vector_indexing_pipeline.py
tests/unit/: test_api_query_service.py  test_api_schemas.py  test_cleaning.py  test_config.py  test_context_builder.py  test_domain_interfaces.py  test_domain_models.py  test_embeddings.py  test_evaluation_datasets.py  test_evaluation_judges.py  test_evaluation_metrics.py  test_evaluation_regression.py  test_evaluation_reports.py  test_evaluation_runner.py  test_generation.py  test_ingestion_loaders.py  test_jsonl_store.py  test_manifest_store.py  test_parsers.py  test_reranking.py  test_retrieval.py  test_storage.py  test_utils.py  test_vector_store.py
(+83 files in other folders)
